Make form data persistent
To be cleared after user press submit. (Ajax on success)

--- a/app/form.html
+++ b/app/form.html
@@ -15,7 +15,7 @@
   <div data-page="form" class="page">
     <!-- Scrollable page content-->
     <div class="page-content">
-      <form action="create-reel.html" method="POST" class="ajax-submit">
+      <form action="create-reel.html" method="POST" class="ajax-submit store-data" id="create-reel-form">
         <div class="content-block-title">Event Name</div>
         <div class="list-block">
           <ul>
