--- a/app/form.html
+++ b/app/form.html
@@ -40,7 +40,7 @@
                 <div class="item-media"><i class="icon ion-pound"></i></div>
                 <div class="item-inner">
                   <div class="item-input">
-                    <input type="text" placeholder="Hashtag linked to this event" name="relive-hash-tag-1"/>
+                    <input type="text" placeholder="Hashtag linked to this event" name="relive-hashtag[]"/>
                   </div>
                 </div>
               </div>
@@ -51,7 +51,7 @@
                 <div class="item-media"><i class="icon ion-pound"></i></div>
                 <div class="item-inner">
                   <div class="item-input">
-                    <input type="text" placeholder="Hashtag linked to this event" name="relive-hash-tag-2"/>
+                    <input type="text" placeholder="Hashtag linked to this event" name="relive-hashtag[]"/>
                   </div>
                 </div>
               </div>
@@ -62,7 +62,7 @@
                 <div class="item-media"><i class="icon ion-pound"></i></div>
                 <div class="item-inner">
                   <div class="item-input">
-                    <input type="text" placeholder="Hashtag linked to this event" name="relive-hash-tag-3"/>
+                    <input type="text" placeholder="Hashtag linked to this event" name="relive-hashtag[]"/>
                   </div>
                 </div>
               </div>
@@ -73,7 +73,7 @@
                 <div class="item-media"><i class="icon ion-pound"></i></div>
                 <div class="item-inner">
                   <div class="item-input">
-                    <input type="text" placeholder="Hashtag linked to this event" name="relive-hash-tag-4"/>
+                    <input type="text" placeholder="Hashtag linked to this event" name="relive-hashtag[]"/>
                   </div>
                 </div>
               </div>
@@ -84,7 +84,7 @@
                 <div class="item-media"><i class="icon ion-pound"></i></div>
                 <div class="item-inner">
                   <div class="item-input">
-                    <input type="text" placeholder="Hashtag linked to this event" name="relive-hash-tag-5"/>
+                    <input type="text" placeholder="Hashtag linked to this event" name="relive-hashtag[]"/>
                   </div>
                 </div>
               </div>
