--- a/app/form.html
+++ b/app/form.html
@@ -15,7 +15,7 @@
   <div data-page="form" class="page">
     <!-- Scrollable page content-->
     <div class="page-content">
-      <form action="create-reel.html" method="POST" class="ajax-submit store-data" id="create-reel-form">
+      <form action="https://relive.space/api/event" method="POST" class="ajax-submit store-data" id="create-reel-form">
         <div class="content-block-title">Event Name</div>
         <div class="list-block">
           <ul>
@@ -40,7 +40,7 @@
                 <div class="item-media"><i class="icon ion-pound"></i></div>
                 <div class="item-inner">
                   <div class="item-input">
-                    <input type="text" placeholder="Hashtag linked to this event" name="relive-hashtag[]"/>
+                    <input type="text" placeholder="Hashtag linked to this event" name="relive-hashtags[]"/>
                   </div>
                 </div>
               </div>
@@ -51,7 +51,7 @@
                 <div class="item-media"><i class="icon ion-pound"></i></div>
                 <div class="item-inner">
                   <div class="item-input">
-                    <input type="text" placeholder="Hashtag linked to this event" name="relive-hashtag[]"/>
+                    <input type="text" placeholder="Hashtag linked to this event" name="relive-hashtags[]"/>
                   </div>
                 </div>
               </div>
@@ -62,7 +62,7 @@
                 <div class="item-media"><i class="icon ion-pound"></i></div>
                 <div class="item-inner">
                   <div class="item-input">
-                    <input type="text" placeholder="Hashtag linked to this event" name="relive-hashtag[]"/>
+                    <input type="text" placeholder="Hashtag linked to this event" name="relive-hashtags[]"/>
                   </div>
                 </div>
               </div>
@@ -73,7 +73,7 @@
                 <div class="item-media"><i class="icon ion-pound"></i></div>
                 <div class="item-inner">
                   <div class="item-input">
-                    <input type="text" placeholder="Hashtag linked to this event" name="relive-hashtag[]"/>
+                    <input type="text" placeholder="Hashtag linked to this event" name="relive-hashtags[]"/>
                   </div>
                 </div>
               </div>
@@ -84,7 +84,7 @@
                 <div class="item-media"><i class="icon ion-pound"></i></div>
                 <div class="item-inner">
                   <div class="item-input">
-                    <input type="text" placeholder="Hashtag linked to this event" name="relive-hashtag[]"/>
+                    <input type="text" placeholder="Hashtag linked to this event" name="relive-hashtags[]"/>
                   </div>
                 </div>
               </div>
