--- a/app/form.html
+++ b/app/form.html
@@ -15,7 +15,7 @@
   <div data-page="form" class="page">
     <!-- Scrollable page content-->
     <div class="page-content">
-      <form action="https://relive.space/api/event" method="POST" class="ajax-submit store-data" id="create-reel-form">
+      <form action="https://relive.space/api/event" method="POST" class="ajax-submit" id="create-reel-form">
         <div class="content-block-title">Event Name</div>
         <div class="list-block">
           <ul>
