Event posts now render using the correct markup (image post vs text post). Form items now have white backgrounds.

--- a/app/form.html
+++ b/app/form.html
@@ -3,7 +3,7 @@
 <!-- Top Navbar-->
 <div class="navbar">
   <div class="navbar-inner">
-    <div class="left"><a href="#" class="back link"> <i class="icon ion-ios-arrow-back"></i><span>Back</span></a></div>
+    <div class="left"><a href="index.php" class="back link"> <i class="icon ion-ios-arrow-back"></i><span>Back</span></a></div>
     <div class="center sliding">Start a Reel</div>
     <div class="right">
       <a href="#" class="link icon-only open-panel"><i class="icon ion-ios-more"></i></a>
