--- a/app/form.html
+++ b/app/form.html
@@ -32,7 +32,7 @@
           </ul>
         </div>
 
-        <div class="content-block-title" id="hashtags-header">Hashtag</div>
+        <div class="content-block-title" id="hashtags-header">Add up to 5 hashtags</div>
         <div class="list-block">
           <ul>
             <li>
